k8s/loadbalancer-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-harness-demo-app
spec:
  selector:
    app: webapp-demo-harness
  ports:
    - port: 80
      targetPort: 8000
  type: LoadBalancer


kind: Service
metadata:
  name: loadbalancer-harness-demo-app-api
spec:
  selector:
    app: webapp-demo-harness-api
  ports:
    - port: 80
      targetPort: 8000
  type: LoadBalancer
