k8s/nodeport-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-ecointet-webapp
  namespace: production
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app: ecointet-webapp
  type: NodePort
